--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -25,9 +25,10 @@ jobs:
       - name: commit
         run: |
           cd  dist
+          git init
           git config --global user.email 763839938@qq.com
           git config --global user.name LuckRain7
-          git add .
+          git add -A
           git commit -m "bot deploy"
 
       - name: Push changes
