--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -35,4 +35,5 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUBTOKEN }}
-          branch: page
+          branch: master:gh-pages
+          force: true
