--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -23,6 +23,8 @@ jobs:
           npm run build
 
       - name: commit
+        env:
+          GITHUB_REPO: LuckRain7/md2bookmarks
         run: |
           cd  dist
           git init
@@ -30,10 +32,7 @@ jobs:
           git config --global user.name LuckRain7
           git add -A
           git commit -m "bot deploy"
+          git push --force "https://${{ secrets.GITHUBTOKEN }}"@github.com/$GITHUB_REPO" master:page
 
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUBTOKEN }}
-          branch: master:gh-pages
-          force: true
+
+# https://${GITHUB_ACTOR}:${INPUT_GITHUB_TOKEN}@github.com/${REPOSITORY}.git
