--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -27,8 +27,8 @@ jobs:
           cd  dist
           git init
           git config --global user.email 763839938@qq.com
-          git config --global user.name LuckRain7
-          git add -A
+          git config --global user.name  LuckRain7
+          git add .
           git commit -m "bot deploy"
 
       - name: push github
