--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -31,12 +31,10 @@ jobs:
           git add .
           git commit -m "bot deploy"
 
-      - name: push gitee
-        run: |
-          git push --force https://${{ secrets.GITEETOKEN }}@gitee.com/LuckRain/bookmarks.git page
-
       - name: push github
         run: |
-          git push --force https://${{ secrets.GITHUBTOKEN }}@github.com/LuckRain7/bookmarks.git page
+          git push --force  --quiet https://${{ secrets.GITHUBTOKEN }}@github.com/LuckRain7/bookmarks.git main:page
 
-
+      - name: push gitee
+        run: |
+          git push --force --quiet https://$LuckRain:{{ secrets.GITEETOKEN }}@gitee.com/LuckRain/bookmarks.git master:page
