--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "ejs": "^3.1.5",
+    "html-minifier": "^4.0.0",
     "koa": "^2.13.0",
     "koa-static": "^5.0.0"
   }
